--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,22 @@
     oneline = log --pretty=oneline
 [http]
     postBuffer = 524288000
+[color]
+    branch = auto
+    diff = auto
+    status = auto
+    grep = auto
+    ui = auto
+    interactive = auto
+[color "branch"]
+    current = yellow reverse
+    local = yellow
+    remote = green
+[color "diff"]
+    meta = yellow
+    frag = magenta
+    old = red
+    new = green
+[color "status"]
+    added = yellow
+    changed = green
