--- a/.gitconfig
+++ b/.gitconfig
@@ -33,3 +33,7 @@
     helper = cache --timeout 36000
 [core]
     editor = vim
+[pack]
+    threads = 1
+    deltaCacheSize = 128m
+    windowMemory = 50m
