--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
     st = status
     oneline = log --pretty=oneline
 [http]
-    postBuffer = 524288000
+	postBuffer = 52428800000
 [color]
     branch = auto
     diff = auto
@@ -33,7 +33,13 @@
     helper = cache --timeout 36000
 [core]
     editor = vim
+	autocrlf = false
 [pack]
     threads = 1
     deltaCacheSize = 128m
     windowMemory = 50m
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
