--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,8 @@
     helper = cache --timeout 36000
 [core]
     editor = vim
-	autocrlf = false
+	autocrlf = input
+	whitespace = cr-at-eol
 [pack]
     threads = 1
     deltaCacheSize = 128m
@@ -43,3 +44,7 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[pull]
+	rebase = true
+[url "https://"]
+	insteadOf = git://
